--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	vertical-align: baseline;
+    
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -29,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+    overflow-x: hidden;
 }
 ol, ul {
 	list-style: none;
@@ -52,27 +54,66 @@ table {
 
 .top-container{
     font-family: 'Poppins', sans-serif;
+    min-height: 835px;
+    width: 100%;
 }
 .nav-item{
+    z-index: 999;
     font-family: 'Ephesis', cursive;
     margin-left: 50px;
     margin-top: 50px;
     letter-spacing: 2px;
 }
+
+
+
+/*effect-underline*/
+.nav-item a.effect-underline:after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    border-bottom: 1px solid;
+    margin-top: 10px;
+    opacity: 0;
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: scale(0,1);
+	transform: scale(0,1);
+}
+
+a.effect-underline:hover:after {
+  opacity: 1;
+	-webkit-transform: scale(1);
+	transform: scale(1);
+}
+
+.scale:hover {
+    transform: scale(1.2);
+}
 .header-1{
     padding-top: 260px;
     margin-right: 20px;
     text-align: right;
-    font-size: 100px;
+    font-size: 70px;
+    font-weight: 600;
     letter-spacing: 7.5px;
 }
 .header-2{
-    padding-top: 350px;
-    font-size: 70px;
+    padding-top: 200px;
+    font-size: 40px;
     letter-spacing: 3px;
+    text-align: center;
+}
+.underline-name{
+    margin-top: -30px;
 }
 .header-3{
-    font-size: 35px;
+    /* position: absolute; */
+    font-size: 25px;
+    color: #00FFF5;
+    transform: rotate(-7deg);
+    margin-left: 500px;
+    text-align: center;
 }
 
 .bg-1{
@@ -80,12 +121,35 @@ table {
     background-size: cover;
     max-height: 100vh;
     background-attachment: fixed;
+    background-position: center;
+}
+.git{
+    width: 70%;
 }
 .abstract-1{
     position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 
 .middle-container{
     height: 100vh;
 }
+
+
+
+
+
+@media only screen and (max-width: 812px) {
+    .header-1{
+        
+        font-size: 40px;
+    }
+    .header-2{
+        font-size: 25px;
+    }
+    .bg-1{
+        background-position: center;
+    }
+  }
