--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -206,6 +208,9 @@ a.effect-underline:hover:after {
 .logo-end{
     margin-right: 100px;
 }
+.about-me-desc{
+    font-family: 'Open Sans', sans-serif;
+}
 /* End Middle-container-1 */
 
 /* Middle-container-2 */
@@ -277,6 +282,9 @@ a.effect-underline:hover:after {
 .testimonials-img{
     width: 100px;
     height: 100px;
+}
+.testimonials-text{
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* End Middle-container-3 */
