--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ footer, header, hgroup, menu, nav, section {
 }
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 body {
 	line-height: 1;
